welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ',' found.
	if (sleepIn == false,false){return true}
                            ^sleepIn:5: error: illegal start of simple expression
}
^