welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (sleepIn == false,false){return true}
	if (sleepIn == true,false){return false}
	
}
